# sbnAnomalyDetection

./: .gitignore  README.md  config_maker.py  evaluate_gnn_sweep.py  npz_npy_reader.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_gnn_sweep.py  run_materialize_windows.sh  train_test_from_npz.py
configs/: default.yaml  fusion.yaml  gnn.yaml  materialize_windows.yaml  pmt.yaml  tpc.yaml  window.yaml
data/: availableRuns.json  filelist_test.txt  filelist_train.txt  windows_test.npz  windows_train.npz
graphing/: inference_result_plotter.py  plot_channel_time.C  plot_channelhist.C  plot_channelhist.py  plot_good_bad_scores.py  plot_inference_result.py  plot_integral.C  plot_materialize_window.py  plot_sweep_metrics.py  plot_wrapper.C  plot_wrapper.py
sbn_anomaly/: __init__.py
sbn_anomaly/data/: __init__.py  dataset.py  event_joiner.py  filelist.txt  materialize_windows.py  sparse_window_dataset.py  stream_dataset.py  streaming.py
sbn_anomaly/infer/: __init__.py  cli.py  inferrer.py
sbn_anomaly/models/: __init__.py  fusion_model.py  gnn_forecaster.py  gnn_forecaster_pyg.py  pmt_model.py  tpc_model.py  window_model.py
sbn_anomaly/train/: __init__.py  cli.py  fusion_trainer.py  gnn_trainer.py  pmt_trainer.py  tpc_trainer.py  trainer.py  window_trainer.py
sbn_anomaly/utils/: __init__.py  logging.py  metrics.py
scripts/: run_inference.sh  train_fusion.sh  train_pmt.sh  train_tpc.sh  train_window.sh
tests/: test_data.py  test_infer.py  test_models.py  test_stream_dataset.py  test_train.py
tuning_configs/: gnn_test1.yaml  gnn_test2.yaml  gnn_test3.yaml
tuning_configs/test_configs/: gnn_test1.yaml  gnn_test3.yaml  max_memory_test.yaml  max_memory_test2.yaml
tuning_configs/tests/: gnn_test2.yaml
tunning_configs/: gnn_test1.yaml  gnn_test2.yaml
