[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbn-anomaly"
version = "0.1.0"
description = "Streaming anomaly detection pipeline for the Short-Baseline Neutrino (SBN) experiment"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SBN Collaboration" }]
keywords = ["particle physics", "anomaly detection", "deep learning", "neutrino"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "numpy>=1.24.0",
    "uproot>=5.0.0",
    "awkward>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "colorlog>=6.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
sbn-train = "sbn_anomaly.train.cli:main"
sbn-infer = "sbn_anomaly.infer.cli:main"
sbn-ablate-hit-branches = "sbn_anomaly.train.ablation:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbn_anomaly*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation]
env = { PYTORCH_NO_CUDA_MEMORY_CACHING = "1" }

[tool.pixi.pypi-dependencies]
sbn-anomaly = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
colorlog = ">=6.10.1,<7"
root = ">=6.38.4,<7"
fsspec-xrootd = ">=0.5.2,<0.6"
pip = ">=26.1.1,<27"
